[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.97"                                # error handling
bytes = "1.10.1"                                  # helps manage buffers
clap = { version = "4.5.31", features = ["derive"] }                                  # helsp manage command line arguments
either = "1.15.0"
env_logger = "0.11.6"
line-span = "0.1.5"
log = "0.4.26"
test-log = "0.2.17"
thiserror = "2.0.12"                             # error handling
winnow = "0.7.3"

[dev-dependencies]
manifest-dir-macros = "0.1.18"
paste = "1.0.15"
quote = "1.0.39"
pretty_assertions = "1.4.1"
